--- a/config/settings.json
+++ b/config/settings.json
@@ -1,4 +1,4 @@
 {
     "output_dir": "output",
-    "gemini_api_key": "Пиздец спалил ключ теперь буду искать его на плати.ру"
+    "gemini_api_key": "your-gemini-api-key-here"
 }
